--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -1,53 +1,60 @@
 h1 {
-    font-weight: 700;
-    text-align: center;
-    line-height: 1.2;
-    letter-spacing: -2px;
-    font-size: 62px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 1.2;
+  letter-spacing: -2px;
+  font-size: 62px;
+  font-family: "Poppins", sans-serif;
 }
 
 h2 {
-    font-weight: 700;
-    text-align: center;
-    line-height: 1.2;
-    letter-spacing: -2px;
-    font-size: 48px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 1.2;
+  letter-spacing: -2px;
+  font-size: 48px;
+  font-family: "Poppins", sans-serif;
 }
 
 h3 {
-    font-weight: 700;
-    line-height: 1.2;
-    letter-spacing: -2px;
-    font-size: 40px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -2px;
+  font-size: 40px;
+  font-family: "Poppins", sans-serif;
 }
 
 h4 {
-    font-weight: 700;
-    line-height: 1.2;
-    letter-spacing: -2px;
-    font-size: 32px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -2px;
+  font-size: 32px;
+  font-family: "Poppins", sans-serif;
 }
 
 h5 {
-    font-weight: 700;
-    line-height: 1.2;
-    letter-spacing: -2px;
-    font-size: 24px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -2px;
+  font-size: 24px;
+  font-family: "Poppins", sans-serif;
 }
 
 p {
-    font-weight: 400;
-    line-height: 1.5;
-    font-size: 20px;
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
 }
 
 a {
-    font-weight: 400;
-    text-decoration: none;
-    line-height: 1.5;
-    font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  line-height: 1.5;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
 }
 
-ul { 
-    list-style-type: none;
+ul {
+  list-style-type: none;
 }
