--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -41,72 +41,71 @@ Shade: #212529 (Graphite)
 */
 
 
-
-
-h1 {
+h1, h2, h3, h4, h5 {
   font-weight: 700;
-  text-align: center;
   line-height: 1.2;
   letter-spacing: -2px;
-  font-size: 62px;
   font-family: "Poppins", sans-serif;
-  color: #212529
+  color: #212529;
+}
+
+h1 {
+  text-align: center;
+  font-size: 62px;
 }
 
 h2 {
-  font-weight: 700;
   text-align: center;
-  line-height: 1.2;
-  letter-spacing: -2px;
   font-size: 48px;
-  font-family: "Poppins", sans-serif;
-  color: #212529;
 }
 
 h3 {
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: -2px;
   font-size: 40px;
-  font-family: "Poppins", sans-serif;
-  color: #212529;
 }
 
 h4 {
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: -2px;
   font-size: 32px;
-  font-family: "Poppins", sans-serif;
-  color: #212529;
 }
 
 h5 {
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: -2px;
   font-size: 24px;
+}
+
+p, a, small-text {
+  font-weight: 400;
+  line-height: 1.5;
   font-family: "Poppins", sans-serif;
-  color: #212529;
+  color: #495057;
 }
 
 p {
-  font-weight: 400;
-  line-height: 1.5;
-  font-size: 20px;
-  font-family: "Poppins", sans-serif;
-  color: #495057;
+  font-size: 20px; 
 }
 
 a {
-  font-weight: 400;
   text-decoration: none;
-  line-height: 1.5;
   font-size: 16px;
-  font-family: "Poppins", sans-serif;
-  color: #495057;
 }
 
 ul {
-  list-style-type: none;
+  list-style: none;
+}
+
+.small-text {
+  font-size: 12px;
+}
+
+.btn {
+  font-weight: 400;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.btn-primary {
+  color: #339af0;
+}
+
+.btn-secondary {
+  color: #9775fa;
 }
