--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -105,6 +105,7 @@ ul {
 .btn {
   font-size: 16px;
   text-decoration: none;
+  padding: 15px 30px;
 }
 
 .btn-primary:link,
@@ -133,6 +134,7 @@ ul {
 
 .highlight {
 color: #ffffff;
+padding: 5px 10px;
 }
 
 .highlight-primary {
@@ -181,6 +183,7 @@ color: #ffffff;
   text-align: center;
   background-color: #339af0;
   width: 1000px;
+  padding: 100px 200px;
 }
 
 /* ------- FOOTER SECTION -------- */
