--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -212,6 +212,7 @@ border-radius: 4px;
   width: 1000px;
   padding: 100px 200px;
   border-radius: 20px;
+  margin: 0 auto;
 }
 
 /* ------- FOOTER SECTION -------- */
