--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -51,6 +51,54 @@ Black: #000000 (Black)
 
 /* ------------------- GLOBAL STYLES --------------------------  */
 
+:root {
+ /* FONT SIZE */ 
+  --text-sm: 1.2rem;
+  --text-base: 1.6rem;
+  --text-paragraph: 2rem;
+  --text-h5: 2.4rem;
+  --text-h4: 3.2rem;
+  --text-h3: 4rem;
+  --text-h2: 4.8rem;
+  --text-h1: 6.2rem;
+
+  /* FONT WEIGHT */
+  --font-weight-normal: 400;
+  --font-weight-bold: 700;
+  
+  /* LINE HEIGHT */
+  --line-height-normal: 1.2;
+  --line-height-paragraph: 1.5;
+
+  /* LETTER SPACING */
+  --letter-spacing-tight: -2px;
+
+  /* FONT FAMILY */
+  --font-family: "Poppins", sans-serif;
+  
+  /* COLORS */
+  --color-primary-base: #339af0;
+  --color-primary-tint: #d0ebff;
+  --color-primary-shade: #1c7ed6;
+
+  --color-secondary-base: #9775fa;
+  --color-secondary-tint: #e5dbff;
+  --color-secondary-shade: #7048e8;
+
+  --color-tertiary-base: #ff922b;
+  --color-tertiary-tint: #ffe8cc;
+  --color-tertiary-shade: #f76707;
+
+  --color-grey-base: #495057;
+  --color-grey-tint: #f1f3f5;
+  --color-grey-shade: #212529;
+
+  /* BORDER RADIUS */
+  --border-radius-sm: 4px;
+  --border-radius-md: 8px;
+  --border-radius-lg: 20px;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -62,10 +110,10 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #495057;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-normal);
+  line-height: var(--line-height-normal);
+  color: var(--color-grey-base);
 }
 
 .container {
@@ -79,39 +127,39 @@ h2,
 h3,
 h4,
 h5 {
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: -2px;
-  color: #212529;
+  font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-tight);
+  letter-spacing: var(--letter-spacing-tight);
+  color: var(--color-grey-shade);
 }
 
 h1 {
-  font-size: 6.2rem;
+  font-size: var(--text-h1);
 }
 
 h2 {
-  font-size: 4.8rem;
+  font-size: var(--text-h2);
 }
 
 h3 {
-  font-size: 4rem;
+  font-size: var(--text-h3);
 }
 
 h4 {
-  font-size: 3.2rem;
+  font-size: var(--text-h4);
 }
 
 h5 {
-  font-size: 2.4rem;
+  font-size: var(--text-h5);
 }
 
 p {
-  font-size: 2rem;
+  font-size: var(--text-paragraph);
 }
 
 a {
   text-decoration: none;
-  font-size: 1.6rem;
+  font-size: var(--text-base);
   display: inline-block;
 }
 
@@ -124,13 +172,13 @@ span {
 }
 
 .small-text {
-  font-size: 1.2rem;
+  font-size: var(--text-sm);
 }
 
 /* ------------------- UI COMPONENTS --------------------------  */
 
 .btn {
-  font-size: 1.6rem;
+  font-size: var(--text-base);
   text-decoration: none;
   padding: 1.5rem 3rem;
   border-radius: 8px;
@@ -138,61 +186,61 @@ span {
 
 .btn-primary:link,
 .btn-primary:visited {
-  color: #ffffff;
-  background-color: #339af0;
-  border: 2px solid #339af0;
+  color: var(--white);
+  background-color: var(--color-primary-base);
+  border: 2px solid var(--color-primary-base);
 }
 
 .btn-primary:hover,
 .btn-primary:active {
-  color: #ffffff;
-  background-color: #1c7ed6;
-  border: 2px solid #1c7ed6;
+  color: var(--white);
+  background-color: var(--color-primary-shade);
+  border: 2px solid var(--color-primary-shade);
 }
 
 .btn-primary-outline:link,
 .btn-primary-outline:visited {
-  color: #339af0;
-  background-color: #ffffff;
-  border: 2px solid #339af0;
+  color: var(--color-primary-base);
+  background-color: var(--white);
+  border: 2px solid var(--color-primary-base);
 }
 
 .btn-primary-outline:hover,
 .btn-primary-outline:active {
-  color: #1c7ed6;
-  background-color: #ffffff;
-  border: 2px solid #1c7ed6;
+  color: var(--color-primary-shade);
+  background-color: var(--white);
+  border: 2px solid var(--color-primary-shade);
 }
 
 .btn-secondary:link,
 .btn-secondary:visited {
-  color: #ffffff;
-  background-color: #9775fa;
-  border: 2px solid #9775fa;
+  color: var(--white);
+  background-color: var(--color-secondary-base);
+  border: 2px solid var(--color-secondary-base);
 }
 
 .btn-secondary:hover,
 .btn-secondary:active {
-  color: #ffffff;
-  background-color: #7048e8;
-  border: 2px solid #7048e8;
+  color: var(--white);
+  background-color: var(--color-secondary-shade);
+  border: 2px solid var(--color-secondary-shade);
 }
 
 .highlight {
-  color: #ffffff;
+  color: var(--white);
   padding: 0.5rem 1rem;
   border-radius: 4px;
 }
 
 .highlight-primary {
-  background-color: #339af0;
+  background-color: var(--color-primary-base);
 }
 
 .highlight-secondary {
-  background-color: #9775fa;
+  background-color: var(--color-secondary-base);
 }
 .highlight-tertiary {
-  background-color: #ff922b;
+  background-color: var(--color-tertiary-base);
 }
 
 .logo-md {
@@ -203,6 +251,13 @@ span {
   width: 80px;
 }
 /* ------------------- SECTIONS --------------------------  */
+
+/* ------- HEADER -------- */
+
+.header {
+  height: 100vh;
+  min-height: 800px;
+}
 
 /* ------- NAVBAR -------- */
 
@@ -253,7 +308,7 @@ span {
 
 .cta-card {
   text-align: center;
-  background-color: #339af0;
+  background-color: var(--color-primary-base);
   max-width: 1000px;
   padding: 10rem 20rem;
   border-radius: 20px;
